--- a/apps/api-integration/src/App.css
+++ b/apps/api-integration/src/App.css
@@ -74,7 +74,7 @@
 
 @media (min-width: 768px) {
   .app-content {
-    grid-template-columns: minmax(300px, 1fr) 2fr;
+    grid-template-columns: minmax(300px, 1fr) 3fr;
   }
 }
 
@@ -202,7 +202,7 @@
 
 @media (min-width: 768px) {
   .weather-content {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 50%);
   }
 }
 
@@ -235,3 +235,8 @@
     background-color: #f9f9f9;
   }
 }
+
+.suggestions-list{
+  position: relative;
+}
+
